--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=KOUROSH-DESKTOP;Database=Magic_VillaAPI;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
   }
 }
+ 
